tests/snapshots/snapshot_test__arrow_expression_body_code.snap
---
source: tests/snapshot_test.rs
expression: code_without_preamble(&result.code)
---
const double = (++cov_18ab365425.s[0], (x) => {
	++cov_18ab365425.f[0];
	++cov_18ab365425.s[1];
	return x * 2;
});
