tests/snapshots/snapshot_test__arrow_function_coverage_map.snap
---
source: tests/snapshot_test.rs
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 1,
        "column": 0
      },
      "end": {
        "line": 1,
        "column": 28
      }
    },
    "1": {
      "start": {
        "line": 1,
        "column": 22
      },
      "end": {
        "line": 1,
        "column": 27
      }
    },
    "2": {
      "start": {
        "line": 2,
        "column": 0
      },
      "end": {
        "line": 2,
        "column": 40
      }
    },
    "3": {
      "start": {
        "line": 2,
        "column": 24
      },
      "end": {
        "line": 2,
        "column": 37
      }
    }
  },
  "fnMap": {
    "0": {
      "name": "double",
      "line": 1,
      "decl": {
        "start": {
          "line": 1,
          "column": 15
        },
        "end": {
          "line": 1,
          "column": 16
        }
      },
      "loc": {
        "start": {
          "line": 1,
          "column": 22
        },
        "end": {
          "line": 1,
          "column": 27
        }
      }
    },
    "1": {
      "name": "add",
      "line": 2,
      "decl": {
        "start": {
          "line": 2,
          "column": 12
        },
        "end": {
          "line": 2,
          "column": 13
        }
      },
      "loc": {
        "start": {
          "line": 2,
          "column": 22
        },
        "end": {
          "line": 2,
          "column": 39
        }
      }
    }
  },
  "branchMap": {},
  "s": {
    "0": 0,
    "1": 0,
    "2": 0,
    "3": 0
  },
  "f": {
    "0": 0,
    "1": 0
  },
  "b": {}
}
