tests/snapshots/snapshot_test__comprehensive_example_coverage_map.snap
---
source: tests/snapshot_test.rs
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 2,
        "column": 2
      },
      "end": {
        "line": 6,
        "column": 3
      }
    },
    "1": {
      "start": {
        "line": 3,
        "column": 4
      },
      "end": {
        "line": 3,
        "column": 28
      }
    },
    "2": {
      "start": {
        "line": 5,
        "column": 4
      },
      "end": {
        "line": 5,
        "column": 29
      }
    },
    "3": {
      "start": {
        "line": 9,
        "column": 0
      },
      "end": {
        "line": 9,
        "column": 28
      }
    },
    "4": {
      "start": {
        "line": 9,
        "column": 22
      },
      "end": {
        "line": 9,
        "column": 27
      }
    },
    "5": {
      "start": {
        "line": 13,
        "column": 4
      },
      "end": {
        "line": 13,
        "column": 31
      }
    },
    "6": {
      "start": {
        "line": 17,
        "column": 0
      },
      "end": {
        "line": 17,
        "column": 44
      }
    }
  },
  "fnMap": {
    "0": {
      "name": "greet",
      "line": 1,
      "decl": {
        "start": {
          "line": 1,
          "column": 0
        },
        "end": {
          "line": 1,
          "column": 14
        }
      },
      "loc": {
        "start": {
          "line": 1,
          "column": 21
        },
        "end": {
          "line": 7,
          "column": 1
        }
      }
    },
    "1": {
      "name": "double",
      "line": 9,
      "decl": {
        "start": {
          "line": 9,
          "column": 15
        },
        "end": {
          "line": 9,
          "column": 16
        }
      },
      "loc": {
        "start": {
          "line": 9,
          "column": 22
        },
        "end": {
          "line": 9,
          "column": 27
        }
      }
    },
    "2": {
      "name": "divide",
      "line": 12,
      "decl": {
        "start": {
          "line": 12,
          "column": 8
        },
        "end": {
          "line": 12,
          "column": 15
        }
      },
      "loc": {
        "start": {
          "line": 12,
          "column": 15
        },
        "end": {
          "line": 14,
          "column": 3
        }
      }
    }
  },
  "branchMap": {
    "0": {
      "loc": {
        "start": {
          "line": 2,
          "column": 2
        },
        "end": {
          "line": 6,
          "column": 3
        }
      },
      "line": 2,
      "type": "if",
      "locations": [
        {
          "start": {
            "line": 2,
            "column": 12
          },
          "end": {
            "line": 4,
            "column": 3
          }
        },
        {
          "start": {
            "line": 4,
            "column": 9
          },
          "end": {
            "line": 6,
            "column": 3
          }
        }
      ]
    },
    "1": {
      "loc": {
        "start": {
          "line": 13,
          "column": 11
        },
        "end": {
          "line": 13,
          "column": 30
        }
      },
      "line": 13,
      "type": "cond-expr",
      "locations": [
        {
          "start": {
            "line": 13,
            "column": 21
          },
          "end": {
            "line": 13,
            "column": 26
          }
        },
        {
          "start": {
            "line": 13,
            "column": 29
          },
          "end": {
            "line": 13,
            "column": 30
          }
        }
      ]
    },
    "2": {
      "loc": {
        "start": {
          "line": 17,
          "column": 15
        },
        "end": {
          "line": 17,
          "column": 43
        }
      },
      "line": 17,
      "type": "binary-expr",
      "locations": [
        {
          "start": {
            "line": 17,
            "column": 15
          },
          "end": {
            "line": 17,
            "column": 29
          }
        },
        {
          "start": {
            "line": 17,
            "column": 33
          },
          "end": {
            "line": 17,
            "column": 43
          }
        }
      ]
    }
  },
  "s": {
    "0": 0,
    "1": 0,
    "2": 0,
    "3": 0,
    "4": 0,
    "5": 0,
    "6": 0
  },
  "f": {
    "0": 0,
    "1": 0,
    "2": 0
  },
  "b": {
    "0": [
      0,
      0
    ],
    "1": [
      0,
      0
    ],
    "2": [
      0,
      0
    ]
  }
}
