tests/snapshots/snapshot_test__for_loop_coverage_map.snap
---
source: tests/snapshot_test.rs
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 1,
        "column": 0
      },
      "end": {
        "line": 3,
        "column": 1
      }
    },
    "1": {
      "start": {
        "line": 1,
        "column": 13
      },
      "end": {
        "line": 1,
        "column": 14
      }
    },
    "2": {
      "start": {
        "line": 2,
        "column": 2
      },
      "end": {
        "line": 2,
        "column": 17
      }
    }
  },
  "fnMap": {},
  "branchMap": {},
  "s": {
    "0": 0,
    "1": 0,
    "2": 0
  },
  "f": {},
  "b": {}
}
