tests/snapshots/snapshot_test__if_else_coverage_map.snap
---
source: tests/snapshot_test.rs
assertion_line: 33
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 2,
        "column": 2
      },
      "end": {
        "line": 6,
        "column": 3
      }
    },
    "1": {
      "start": {
        "line": 3,
        "column": 4
      },
      "end": {
        "line": 3,
        "column": 22
      }
    },
    "2": {
      "start": {
        "line": 5,
        "column": 4
      },
      "end": {
        "line": 5,
        "column": 26
      }
    }
  },
  "fnMap": {
    "0": {
      "name": "check",
      "line": 1,
      "decl": {
        "start": {
          "line": 1,
          "column": 0
        },
        "end": {
          "line": 1,
          "column": 14
        }
      },
      "loc": {
        "start": {
          "line": 1,
          "column": 18
        },
        "end": {
          "line": 7,
          "column": 1
        }
      }
    }
  },
  "branchMap": {
    "0": {
      "loc": {
        "start": {
          "line": 2,
          "column": 2
        },
        "end": {
          "line": 6,
          "column": 3
        }
      },
      "line": 2,
      "type": "if",
      "locations": [
        {
          "start": {
            "line": 2,
            "column": 13
          },
          "end": {
            "line": 4,
            "column": 3
          }
        },
        {
          "start": {
            "line": 4,
            "column": 9
          },
          "end": {
            "line": 6,
            "column": 3
          }
        }
      ]
    }
  },
  "s": {
    "0": 0,
    "1": 0,
    "2": 0
  },
  "f": {
    "0": 0
  },
  "b": {
    "0": [
      0,
      0
    ]
  }
}
