tests/snapshots/snapshot_test__logical_expression_code.snap
---
source: tests/snapshot_test.rs
expression: code_without_preamble(&result.code)
---
const x = (++cov_18ab365425.s[0], (++cov_18ab365425.b[0][0], a) || (++cov_18ab365425.b[0][1], b) && (++cov_18ab365425.b[0][2], c));
