tests/snapshots/snapshot_test__logical_expression_coverage_map.snap
---
source: tests/snapshot_test.rs
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 1,
        "column": 15
      },
      "end": {
        "line": 1,
        "column": 26
      }
    }
  },
  "fnMap": {},
  "branchMap": {
    "0": {
      "loc": {
        "start": {
          "line": 1,
          "column": 15
        },
        "end": {
          "line": 1,
          "column": 26
        }
      },
      "line": 1,
      "type": "binary-expr",
      "locations": [
        {
          "start": {
            "line": 1,
            "column": 15
          },
          "end": {
            "line": 1,
            "column": 16
          }
        },
        {
          "start": {
            "line": 1,
            "column": 20
          },
          "end": {
            "line": 1,
            "column": 21
          }
        },
        {
          "start": {
            "line": 1,
            "column": 25
          },
          "end": {
            "line": 1,
            "column": 26
          }
        }
      ]
    }
  },
  "s": {
    "0": 0
  },
  "f": {},
  "b": {
    "0": [
      0,
      0,
      0
    ]
  }
}
