tests/snapshots/snapshot_test__nullish_coalescing_coverage_map.snap
---
source: tests/snapshot_test.rs
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 1,
        "column": 0
      },
      "end": {
        "line": 1,
        "column": 17
      }
    }
  },
  "fnMap": {},
  "branchMap": {
    "0": {
      "loc": {
        "start": {
          "line": 1,
          "column": 10
        },
        "end": {
          "line": 1,
          "column": 16
        }
      },
      "line": 1,
      "type": "binary-expr",
      "locations": [
        {
          "start": {
            "line": 1,
            "column": 10
          },
          "end": {
            "line": 1,
            "column": 11
          }
        },
        {
          "start": {
            "line": 1,
            "column": 15
          },
          "end": {
            "line": 1,
            "column": 16
          }
        }
      ]
    }
  },
  "s": {
    "0": 0
  },
  "f": {},
  "b": {
    "0": [
      0,
      0
    ]
  }
}
